Combine routes and pageComponents

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -15,4 +15,12 @@
   #root, #root > div {
     height: 100%;
   }
+  a {
+    color: #3f51b5;
+    text-decoration: none;
+  }
+  a:hover {
+    text-decoration: underline;
+    text-underline-position: under;
+  }
 </style>
